--- a/_includes/archive-single-talk.html
+++ b/_includes/archive-single-talk.html
@@ -47,5 +47,8 @@
     {% if post.slidesurl %}
       <p><a href="{{ post.slidesurl }}">Download Slides</a></p>
     {% endif %}
+    {% if post.githuburl %}
+      <p><a href="{{ post.githuburl }}">View on GitHub</a></p>
+    {% endif %}
   </article>
 </div>
